change extension name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "newnewtwitter diewland mod",
+  "name": "#newnewtwitter diewland mod",
   "version": "1.0.0",
   "description": "A little bit more Twitter CSS",
 /*
